# mas

./: .gitignore  README.md  analysis.ipynb  analysis.py  analysis.sh  check-ratio.py  check.ipynb  clean.sh  env.sh  first-run.sh  influencing.sh  main-results.ipynb  make-ratio-df.sh  make_data.sh  offline_llama_70B.py  offline_llama_70B.sh  per_receiver_results.csv  plots-analysis.40783.out  plots-analysis.40785.err  plots-analysis.40787.err  plots-analysis.40787.out  plots-analysis.40788.out  plots-analysis.40790.err  plots-analysis.40790.out  plots-analysis.40791.err  plots-analysis.40791.out  plots-analysis.40792.out  plots-analysis.40794.out  plots-analysis.40796.out  plots-analysis.40797.out  pyproject.toml  requirements.txt  results-job.sh  run-eval-round2.py  run-eval.py  second-run.sh  structured-output.sh  test_llama.py  test_llama.sh
configs/: decoding.yaml  default-model.yaml  model.yaml  models.yaml
data/sarc/: dummy.csv  flagged.csv  label_list.txt  sarcasm2_llama.csv  train_labels.txt
models/Qwen/: Qwen_1_5B.py  Qwen_1_5B.sh  Qwen_7B.py  Qwen_7B.sh
models/llama/: llama_1B.py  llama_1B.sh  llama_8B.py  llama_8B.sh
results/: down_results.csv  input-r2-claim-count.csv  input-r2-claim-un_count.csv  mistral-0.3-7b.csv  mistral-0.3-7b.jsonl  mistral-0.3-7b:_round2.csv  qwen-2.5-1.5b.csv  qwen-2.5-1.5b.jsonl  qwen-2.5-1.5b_round2.csv  up_results.csv
results_small/: first-llama-3.2-1b.csv  first-llama-3.2-3b.csv
src/: .analysis.py.swo  analysis.py  analysis.py~  clean_results.py  concat_results.py  influencing.py  prepare_round2.py  preprocessing.py  preprossecing.py  rate.py  ratio.py  results.py  simple-job.py  structured-output.py
utils/: data.py  io.py  models.py  prompts.py  runner.py  schemas.py
(+4 files in other folders)
