[project]
name = "rp"
version = "0.0.1"
requires-python = "==3.12.*"
dependencies = [
  "vllm==0.10.0",
  "torch>=2.5,<3",
  "torchvision>=0.20,<1",
  "torchaudio>=2.5,<3",
  "dotenv>=0.9.9",
  "bitsandbytes==0.48.1",
  "nvidia-ml-py>=13.580.82",
  "pandas>=2.3.3",
  "matplotlib>=3.10.7",
  "seaborn>=0.13.2",
]

# Tell uv to fetch PyTorch packages from the CUDA 12.6 index on Linux.
[tool.uv.sources]
torch = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux'" }]

# Define the named index for CUDA 12.6 (explicit = true prevents it being used for unrelated packages).
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

